--- a/rules.yml
+++ b/rules.yml
@@ -7,7 +7,7 @@ groups:
         labels:
           severity: critical
         annotations:
-          description: '🚨𝐒𝐄𝐑𝐕𝐄𝐑 𝐢𝐬 𝐃𝐎𝐖𝐍 {{ $labels.instance }} '
+          description: 'DOWN {{ $labels.instance }} '
           summary: 'SERVER IS UNAVAILABLE FOR MORE THAN 1 MINUTE.'
       - alert: DISK_space_usage_is_High
         expr: 100 * (1 - (node_filesystem_avail_bytes / node_filesystem_size_bytes{mountpoint="/"})) > 85
@@ -15,7 +15,7 @@ groups:
         labels:
           severity: critical
         annotations:
-          description: '🚨𝐇𝐈𝐆𝐇 𝐃𝐈𝐒𝐊 𝐔𝐒𝐀𝐆𝐄 {{ $labels.instance }} '
+          description: 'HDD {{ $labels.instance }} '
           summary: 'DISK IS MORE THAN 85 PERCENT FULL.'
       - alert: DISK_space_BIGDATA_usage_is_High
         expr: 100 * (1 - (node_filesystem_avail_bytes / node_filesystem_size_bytes{mountpoint="/bigdata"})) > 85
@@ -23,7 +23,7 @@ groups:
         labels:
           severity: critical
         annotations:
-          description: '🚨𝐇𝐈𝐆𝐇 𝐃𝐈𝐒𝐊 𝐔𝐒𝐀𝐆𝐄 {{ $labels.instance }} '
+          description: 'HDD {{ $labels.instance }} '
           summary: 'DISK IS MORE THAN 85 PERCENT FULL.'
       - alert: CPU_usage_is_High
         expr: 100 - (avg(rate(node_cpu_seconds_total{mode="idle"}[5m])) * 100) > 85
@@ -31,7 +31,7 @@ groups:
         labels:
           severity: critical
         annotations:
-          description: '🚨𝐇𝐈𝐆𝐇 𝐂𝐏𝐔 𝐔𝐒𝐀𝐆𝐄 {{ $labels.instance }} '
+          description: 'CPU {{ $labels.instance }} '
           summary: 'CPU USED AT OVER 85 PERCENT'
       - alert: RAM_usage_is_High
         expr: 100 * (1 - (node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes)) > 85
@@ -39,5 +39,61 @@ groups:
         labels:
           severity: critical
         annotations:
-          description: '🚨𝐇𝐈𝐆𝐇 𝐑𝐀𝐌 𝐔𝐒𝐀𝐆𝐄 {{ $labels.instance }} '
+          description: 'RAM {{ $labels.instance }} '
           summary: 'RAM USAGE IS OVER 85 PERCENT. CHECK SERVER'
+      - alert: GethSyncInfoDown
+        expr: geth_sync_info == 1
+        for: 3m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Geth Sync Info is not false"
+          description: "The Geth Sync Info has become false for more than 3 minutes."
+      - alert: StorySyncInfoDown
+        expr: feature_enabled == 1
+        for: 3m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Story Sync Info is not false"
+          description: "The Story Sync Info has become false for more than 3 minutes."
+      - alert: StoryNotPeer
+        expr: tend_peers == 0
+        for: 1m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Story has no peerse"
+          description: "Story has no peers."
+      - alert: GethNotPeer
+        expr: geth_sync_info == 1
+        for: 1m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Geth has no peerse"
+          description: "Geth has no peers."
+      - alert: NodeJailed
+        expr: jailed == 1
+        for: 1m
+        labels:
+          severity: critical
+        annotations:
+          summary: "NodeJailed"
+          description: "Node is Jailed"
+      - alert: NodeTombstoned
+        expr: tombstoned == 1
+        for: 1m
+        labels:
+          severity: critical
+        annotations:
+          summary: "NodeTombstoned"
+          description: "Node Tombstoned"
+      - alert: NodeHeightLags
+        expr: (api_height - latest_block_height) > 100
+        for: 3m
+        labels:
+          severity: critical
+        annotations:
+          description: 'Node height lags behind API'
+          summary: 'Node height lags behind API'
